--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
             <classifier>jdk15</classifier>
             <!-- jdk版本 -->
         </dependency>
+        <!--jwt依赖-->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.4.0</version>
+        </dependency>
     </dependencies>
 
     <build>
