--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=123456
 spring.datasource.url=jdbc:mysql://localhost:3306/staffhouse?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 #mybatis.type-aliases-package = com.example.second.entity
 mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=1000MB
