--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8088
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=w123456
-spring.datasource.url=jdbc:mysql://localhost:3306/home?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://localhost:3306/staffhouse?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 spring.servlet.multipart.max-file-size=100MB
